# workflow-visualizer

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml
notebooks/: demo.ipynb
src/workflow_visualizer/: __init__.py  controls.py  events.py  parser.py  state.py  widget.py
src/workflow_visualizer/static/: widget.css  widget.js
tests/: test_events.py  test_parser.py  test_state.py
