[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workflow-visualizer"
version = "0.1.0"
description = "Pegasus workflow visualizer for JupyterHub notebooks"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "stealey" }]
dependencies = [
    "anywidget>=0.9.0",
    "traitlets>=5.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "jupyterlab>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/workflow_visualizer"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.6",
]
